--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"start": "nodemon index.js"
 	},
 	"dependencies": {
+		"crypto-js": "^4.1.1",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.0",
